--- a/vue_spring_aws/2022_03_07/2022_03_07.md
+++ b/vue_spring_aws/2022_03_07/2022_03_07.md
@@ -12,5 +12,11 @@
     [“index” View Resolver ??](https://github.com/dheldh77/groupstudy_samsung_mechatronics_euv/blob/master/vue_spring_aws/2022_03_07/view_resolver.md)
     
 - [x]  게시글 등록 화면 만들기
+    - **css는 header에, js는 footer에** : HTML은 위에서 부터 코드가 실행되기 때문에 `head`가 다 실행되고 나서야 `body`가 실행된다. js의 용량이 크면 클수록 body 부분 실행이 늦어진다. js는 body 하단에 두어 화면이 다 그려진 뒤에 호출하는 것이 좋다. `bootstrap.js` 경우 `jQuery`가 꼭 있어야 하기 때문에 bootstrap보다 먼저 호출되도록 코드를 작성한다.
+    - `{{>}}` : 현재 머스테치 파일을 기준으로 다른 파일을 가져온다.
+    - **index.js 에서 `var main = {...}` 하는 이유?** : 브라우저는 스코프를 공용 공간으로 사용하기 때문에 중복된 함수를 방지하고자 즉 **index.js만의 유효범위(scope)를 만들어 사용**하는 것이 일반적이다.
 - [x]  전체 조회 화면 만들기
+    - `{{#posts}}` : posts라는 List를 순회한다, Java의 for문과 동일하다고 생각하면 된다.
+    - `{{id}}` 등의 `{{변수명}}` : List에서 뽑아낸 객체의 필드를 사용한다.
+    - `@Query` : SpringDataJpa에서 제공하지 않는 메소드는 직접 쿼리로 작성할 수 있다. 가독성도 훨씬 좋다.
 - [x]  게시글 수정, 삭제 화면 만들기
