--- a/vue_spring_aws/2022_03_14/2022_03_14.md
+++ b/vue_spring_aws/2022_03_14/2022_03_14.md
@@ -185,3 +185,7 @@ spring:
 ```
 
 - 기존 테스트에 사용했던 ResponseEntity을 그대로 둘 경우에 오류 발생
+
+# 📘 Reference
+- [REST](https://dheldh77.tistory.com/entry/%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC-RESTRepresentational-State-Transfer)
+- [REST vs SOAP](https://dheldh77.tistory.com/entry/%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC-SOAP%EC%99%80-REST)
