--- a/vue_spring_aws/2022_03_21/2022_03_21.md
+++ b/vue_spring_aws/2022_03_21/2022_03_21.md
@@ -56,3 +56,83 @@ Then click on 'Associate Elastic IP Address' and select your instance and privat
 
 ## 3. EC2 서버에 접속하기
 ## 4. 아마존 리눅스 1 서버 생성 시 꼭 해야 할 설정들
+아마존 리눅스 서버에서 자바 기반의 웹 애플리케이션(톰캣, 스프링 부트)이 작동하려면 필수 설정이 필요
+
+ 
+
+### 1) Java8 설치
+
+- 현재 프로젝트의 버전인 자바 8의 설치가 필요
+
+```bash
+sudo yum install -y java-1.8.0-openjdk-devel.x86_64
+```
+
+교재에서는 아마존 리눅스 1 서버를 사용했지만,
+
+아마존 리눅스 2 서버를 사용했을 때, 기본으로 설치되어있는 자바가 없었음
+
+아래는 기본으로 설치되어있거나, 이전에 설치된 자바 버전이 있을 때, 변경 명령어
+
+```bash
+sudo /usr/sbin/alternatives --config java
+```
+
+```bash
+sudo yum remove java-1.7.0-openjdk
+```
+
+```bash
+java -version
+```
+
+### 2) Timezone 변경
+
+- EC2 서버의 기본 타임존은 UTC이기 때문에 서울 기준으로 변경해줘야 함
+
+```bash
+sudo rm /etc/localtime
+sudo ln -s /usr/share/zoneinfo/Asia/Seoul /etc/localtime
+```
+
+```bash
+date
+```
+
+### 3) Hostname 변경
+
+- IP만으로 어떤 서비스의 서버인지 확인이 어렵기 때문에 HOSTNAME을 변경
+
+```bash
+sudo vim /etc/sysconfig/network
+```
+
+```bash
+NETWORKING=yes
+NOZEROCONF=yes
+HOSTNAME=freelec-springboot2-webservice
+```
+
+HOSTNAME을 변경 후 서버 재부팅
+
+```bash
+sudo reboot
+```
+
+추가로 hostname을 등록 후, 
+
+/etc/hosts에 변경한 hostname을 등록
+
+```bash
+sudo vim /etc/hosts
+```
+
+```bash
+127.0.0.1 freelec-springboot2-webservice
+```
+
+hosts 파일은 호스트 주소를 찾을 때 가장 먼저 검색해보는 파일로
+
+아래 링크를 참조
+
+[DNS](https://dheldh77.tistory.com/entry/%EB%84%A4%ED%8A%B8%EC%9B%8C%ED%81%AC-DNSDomain-Name-System)
