--- a/vue_spring_aws/2022_03_21/2022_03_21.md
+++ b/vue_spring_aws/2022_03_21/2022_03_21.md
@@ -55,6 +55,49 @@ Then click on 'Associate Elastic IP Address' and select your instance and privat
 [^vpc]: VPCs are virtual private networks, virtual version of a physical network within the larger network. 
 
 ## 3. EC2 서버에 접속하기
+AWS와 같은 외부 접속을 SSH 접속을 하려면 다음과 같은 명령어를 입력해야 함
+
+[SSH 란?](https://baked-corn.tistory.com/52)
+
+```java
+ssh -i pem 키 위치 EC2의 탄력적 IP 주소
+```
+
+상당히 귀찮으므로 쉽게 하는 방법이 있다.
+
+1. pem키를 ~/.ssh/로 복사 한다 → ~/.ssh/ 디렉토리로 pem 파일을 옮기면 pem 키 파일을 자동으로 읽어 접속 한다
+    
+    (참고) `ll` 명령어는 directory 안에 각 파일 권한, 날짜 및 이름을 한번에 볼 수 있다
+    
+2. pem키가 있는 ~/.ssh directory에 config 파일을 생성
+    
+    ```java
+    vim ~/.ssh/config
+    ```
+    
+    ```java
+    Host springboot2-webservice
+    		HostName ec2 탄력 주소
+    		User ec2-user
+    		IdentityFile ~/.ssh/springboot2-webservice.pem
+    ```
+    
+    Identi**t**yFile 이다 IdentifyFile이 아니라..
+    
+3. 파일 권한 설정
+    
+    ```java
+    chmod 700 ~/.ssh/config
+    ```
+    
+    (참고) user에 모든 권한 부여, group과 others는 모든 권한 제외 - 무슨 chmod로 rw-r—r- 뭐 이런 식으로 권한을 부여 할 수 있는데 그냥 외우지 말고 검색해서 찾자
+    
+4. 이제 아래 명령어로 쉽게 접속 가능 하다
+    
+    ```java
+    ssh springboot2-webservice
+    ```
+    
 ## 4. 아마존 리눅스 1 서버 생성 시 꼭 해야 할 설정들
 아마존 리눅스 서버에서 자바 기반의 웹 애플리케이션(톰캣, 스프링 부트)이 작동하려면 필수 설정이 필요
 
