--- a/vue_spring_aws/2022_03_21/2022_03_21.md
+++ b/vue_spring_aws/2022_03_21/2022_03_21.md
@@ -156,6 +156,11 @@ NOZEROCONF=yes
 HOSTNAME=freelec-springboot2-webservice
 ```
 
+(참고) 준혁은 /etc/sysconfig/newtwork에 HOSTNAME이 없었음 그래서 아래와 같은 방법으로 변경함
+```bash
+hostnamectl set-hostname [사용할 호스트명]
+```
+
 HOSTNAME을 변경 후 서버 재부팅
 
 ```bash
