--- a/vue_spring_aws/2022_03_28/2022_03_28.md
+++ b/vue_spring_aws/2022_03_28/2022_03_28.md
@@ -1,5 +1,94 @@
 # 07장. AWS에 데이터베이스 환경을 만들어보자 - AWS RDS
 ## 1. RDS 인스턴스 생성하기
+<hr>
+
 ## 2. RDS 운영환경에 맞는 파라미터 설정하기
+<hr>
+
 ## 3. 내 PC에서 RDS에 접속해보기
+### 1) RDS 보안 그룹 인바운드 추가
+
+- 로컬 PC에서 RDS로 접근하기 위해서 RDS의 보안 그룹에 본인 PC의 IP를 추가해야 함
+- EC2에 사용된 보안그룹의 그룹 ID 복사 > RDS에 사용된 보안 그룹의 인바운드로 복사한 그룹 ID 추가
+
+> RDS 보안 그룹에 추가한 인바운드
+> 
+
+![](https://github.com/dheldh77/groupstudy_samsung_mechatronics_euv/edit/master/vue_spring_aws/2022_03_28/SecurityGroup.png)
+
+(1) 현재 PC의 IP 등록
+
+(2) EC2의 보안 그룹 추가 (EC2와 RDS 간 접근 가능)
+
+### 2) GUI 클라이언트로 접속
+
+- 교재에서는 인텔리제이에 Database Navigator 플러그인을 설치해서 진행했는데 오류가 있어 DBeaver로 접속
+
+> 접속 정보
+> 
+
+Name : DB Name
+
+Host : 엔드포인트
+
+Port : 포트 번호
+
+User : 유저정보
+
+Password : 유저 비밀번호
+
+### 3) 파라미터 확인 및 변경 쿼리
+
+```sql
+use AWS_RDS_DB_NAME;
+
+# 현재의 character_set, collation 설정 확인
+show variables like '%c'; 
+
+# RDS 파라미터 그룹으로 변경안되는 파라미터 변경
+alter database DB_NAME
+character set = 'utf8mb4'
+collate = 'utf8mb4_general_ci';
+
+# 변경된 타임존 확인
+select @@time_zone, now();
+
+# TEST Table 생성
+create table test (
+	id bigint(20) not null auto_increment,
+	content varchar(255) default null,
+	primary key (id)
+) engine=InnoDB;
+
+# Test 레코드 삽입
+insert into test(content) values ('Test');
+
+# Test Table 확인
+select * from test;
+```
+<hr>
+
 ## 4. EC2에서 RDS에 접근 확인
+### 1) SSH 접속
+
+```bash
+ssh 서비스명
+```
+
+### 2) MySQL CLI 설치
+
+```bash
+sudo yum install mysql
+```
+
+### 3) RDS 접속
+
+```bash
+mysql -u 계정 -p -h Host주소
+```
+
+### 4) Test
+
+```bash
+show database;
+```
