--- a/vue_spring_aws/2022_03_28/2022_03_28.md
+++ b/vue_spring_aws/2022_03_28/2022_03_28.md
@@ -3,6 +3,31 @@
 <hr>
 
 ## 2. RDS 운영환경에 맞는 파라미터 설정하기
+
+These are the first few things to set up after creating your RDS instance:
+* Timezone
+* Character set
+* Max connection[^maxcon]
+
+We can set this up in the parameter group. On the left sidebar, click on "Parameter groups" and create a new group. Let's edit the parameters we mentioned above.
+
+Look for the `time_zone` parameter and set it to your timezone.
+
+Type in `character_set` and set all the parameters that show up to `utf8mb4`[^utf], which is the charset used if you want to support emojis. 
+
+The current `utf8` is an alias for `utf8mb3`, which encodes Unicode characters using 1-3 bytes per character. `utf8mb4`, on the other hand, uses 1-4 bytes per character. 
+
+> UTF-8 encoding the same as utf8mb3 but which stores supplementary  characters in four bytes.
+
+Search for `collation` and set all the parameters to `utf8mb4_general_ci`. What is [collation](https://database.guide/what-is-collation-in-databases/#:~:text=In%20database%20systems%2C%20Collation%20specifies,the%20data%20in%20the%20database.)?
+
+> In database systems, Collation specifies how data is sorted and compared in a database. Collation provides the sorting rules, case, and accent sensitivity properties for the data in the database.
+
+Once we save all the parameters, we need to change the DB settings so that it uses this newly created parameter group. Click on 'Databases' on the left sidebar and click on 'Modify', then update the parameter group accordingly. Reboot the DB. 
+
+
+[^maxcon]: This is automatically calculated based on the instance, but we can also manually set it through the `max_connections` parameter. Check [here](https://docs.aws.amazon.com/AmazonRDS/latest/UserGuide/CHAP_Limits.html#RDS_Limits.MaxConnections) for more info.
+[^utf]: Check out this [stackoverflow post](https://stackoverflow.com/questions/30074492/what-is-the-difference-between-utf8mb4-and-utf8-charsets-in-mysql) for more info.
 <hr>
 
 ## 3. 내 PC에서 RDS에 접속해보기
