--- a/vue_spring_aws/2022_03_28/2022_03_28.md
+++ b/vue_spring_aws/2022_03_28/2022_03_28.md
@@ -1,7 +1,25 @@
 # 07장. AWS에 데이터베이스 환경을 만들어보자 - AWS RDS
 ## 1. RDS 인스턴스 생성하기
-<hr>
+## AWS RDS
+AWS RDS(Relational Database Service) : AWS에서 지원하는 클라우드 기반형 관계형 데이터 베이스
+- 하드웨어 프로비저닝
+- 데이터베이스 설정
+- 패치 및 백업과 같은 운영 작업 자동화
+- **조정 가능한 용량 지원**
 
+## RDS 인스턴스 생성
+1. RDS 검색 → 데이터베이스 생성 클릭
+2. MariaDB 선택
+    
+    [Why MariaDB](https://github.com/dheldh77/groupstudy_samsung_mechatronics_euv/blob/master/vue_spring_aws/2022_03_28/why_mariadb.md)
+    
+3. 표준 생성 선택, MariaDB 선택
+4. MariaDB 10.6.xxx 선택
+5. 프리티어 선택
+6. DB 인스턴스 식별자 이름 정하기
+7. **마스터 사용자 이름/암호 등록**
+8. DB 옵션 정하기 (데이터베이스 이름, 그룹) 포트는 MariaDB는 자동으로 3306으로 설정됨
+9. 인스턴스 생성
 ## 2. RDS 운영환경에 맞는 파라미터 설정하기
 
 These are the first few things to set up after creating your RDS instance:
