--- a/vue_spring_aws/2022_04_18/2022_04_18.md
+++ b/vue_spring_aws/2022_04_18/2022_04_18.md
@@ -1,3 +1,7 @@
 nginx 설치
-sudo yum install nginx
-sudo amazon-linux-extras install nginx1
+- sudo yum install nginx
+- sudo amazon-linux-extras install nginx1
+
+
+nginx 실행
+- sudo systemctl start nginx
