--- a/vue_spring_aws/2022_04_18/2022_04_18.md
+++ b/vue_spring_aws/2022_04_18/2022_04_18.md
@@ -1,7 +1,293 @@
-nginx 설치
-- sudo yum install nginx
-- sudo amazon-linux-extras install nginx1
+# Chapter10. 24시간 365일 중단 없는 서비스를 만들자
 
+## 1. 무중단 배포
 
-nginx 실행
-- sudo systemctl start nginx
+- 이전에는 새벽시간에 개발자들이 남아 배포를 진행
+- 새로운 Jar가 실행되기 전까지 기존 Jar를 종료시켜 놓기 때문에 서비스가 중단
+- 이슈가 생기면 긴급점검을 하는 듯 문제가 많았음.
+
+> 무중단 배포 : 서비스의 중지 없이 배포하는 방법
+> 
+1. AWS에서 블루 그린(Blue-Green) 무중단 배포
+2. 도커를 이용한 웹서비스 무중단 배포
+3. L4 스위치를 이용한 무중단 배포(고가)
+4. Nginx를 이용한 무중단 배포
+
+> Nginx란?
+> 
+- 웹 서버, 리버스 프록시, 캐싱, 로드 밸런싱, 미디어 스트리밍 등을 위한 오픈소스 소프트웨어
+- 저렴하고 쉬움
+- 리버스 프록시를 통해 무중단 배포 환경을 구축할 수 있음
+
+> 리버스 프록시란?
+> 
+- 외부의 요청을 받아 백앤드 서버로 요청을 전달하는 행위
+- 리버스 프록시 서버는 요청을 전달하고, 실제 요청에 대한 처리는 뒷단의 웹 애플리케이션 서버들이 처리
+
+### 1) Nginx를 이용한 무중단 배포
+
+- ec2에 그대로 적용하면 되므로 배포를 위한 새로운 인스턴스가 필요하지 않음
+- 클라우드 인프라가 구축되어 있지 않아도 사용할 수 있는 범용적인 방법
+- 하나의 EC2 혹은 리눅스 서버에 Nginx 1대와 스프링 부트 Jar를 2대를 사용
+    - Nginx는 80(http), 443(https) 포트를 할당
+    - 스프링 부트1은 8081 포트로 실행
+    - 스프링 부트2는 8082 포트로 실행
+    
+
+> Nginx 무중단 배포 운영
+> 
+
+![Screen Shot 2022-04-17 at 4.13.34 PM.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/53dbacb0-edd6-4606-a2eb-f9fb1a59a93f/Screen_Shot_2022-04-17_at_4.13.34_PM.png)
+
+1. 사용자는 서비스 주소로 접속(80 or 443 port)
+2. Nginx는 사용자의 요청을 받아 현재 연결된 스프링 부트로 요청을 전달
+    - 그림에서 8081 port
+3. 8082 port의 스프링 부트는 Nginx 와 연결된 상태가 아니여서 요청을 받지 못함
+
+![Screen Shot 2022-04-17 at 4.18.43 PM.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/5b4ec11f-e177-4015-bd84-ff9e55ffc912/Screen_Shot_2022-04-17_at_4.18.43_PM.png)
+
+1. 신규 배포가 필요하면, Nginx가 연결되어 있지 않은 8082 port로 배포
+2. 배포하는 동안에도 Nginx는 8081 port와 연결되어 있기 때문에 서비스는 중단되지 않음
+3. 배포가 끝나면 정상적으로 8082 port가 구동 중인지 확인
+4. 8082 port가 정상 구동 중이면 nginx reload 명령어를 통해 8082를 nginx와 연결
+    - nginx reload는 0.1초 이내에 완료
+    
+
+> 무중단 배포 구조
+> 
+
+![Screen Shot 2022-04-17 at 4.31.26 PM.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/dfdad423-da01-46b5-8f23-75ff428ba412/Screen_Shot_2022-04-17_at_4.31.26_PM.png)
+
+## 2. Nginx 설치와 스프링 부트 연동
+
+### 1) Nginx 설치
+
+> Nginx 설치
+> 
+
+```bash
+sudo yum install nginx
+```
+
+- 위 명령어가 먹히지 않아 아래 명령어로 실행
+
+```bash
+sudo amazon-linux-extras install nginx1
+```
+
+> Nginx 실행
+> 
+
+```bash
+sudo service nginx start
+```
+
+- 마찬가지로 위 명령어가 먹히지 않아 아래 명령어로 실행
+
+```bash
+sudo systemctl start nginx
+```
+
+- 교재에서는 “Starting nginx: [    OK   ]”라는 결과가 출력된다고 했지만 아무것도 출력되지 않음
+
+### 2) 보안 그룹 추가
+
+- EC2 → 보안 그룹 → EC2 보안 그룹 선택 → 인바운드 편집
+
+![Screen Shot 2022-04-17 at 4.37.20 PM.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/53017bb8-6c1c-405f-8ab6-732b8ee8afd3/Screen_Shot_2022-04-17_at_4.37.20_PM.png)
+
+![Screen Shot 2022-04-17 at 4.37.41 PM.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/8ebb5905-bee2-4f32-95a8-3e125931b1c9/Screen_Shot_2022-04-17_at_4.37.41_PM.png)
+
+### 3) 리디렉션 주소 추가
+
+- 8080이 아닌 80포트로 주소가 변경되어 구글과 네이버 로그인에도 변경된 주소를 등록
+- 8080 포트를 제거하고 도메인만 등록
+
+### 4) Nginx와 스프링 부트 연동
+
+- Nginx가 현재 실행 중인 스프링 부트 프로젝트를 바라볼 수 있도록 프록시 설정
+
+```bash
+sudo vim /etc/nginx/nginx.conf
+```
+
+- vim으로 Nginx 설정 파일 수정
+
+```bash
+proxy_pass http://localhost:8080;
+proxy_set_header X-Real-IP $remote_addr; # 1
+proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for; # 2
+proxy_set_header Host $http_host; # 3
+```
+
+- server 아래의 location / 부분에 위의 코드를 추가
+- 1. proxy_pass : Nginx로 요청이 오면 http:/localhost:8080으로 전달
+- 2. proxy_set_header : 실제 요청 데이터를 header의 각 항목에 할당
+
+> Nginx 재시작
+> 
+
+```bash
+sudo service nginx restart
+```
+
+- 위 명령어가 먹히지 않아 아래 명령어로 실행
+
+```bash
+sudo systemctl restart nginx
+```
+
+## 3. 무중단 배포 스크립트 만들기
+
+### 1) 무중단 배포를 위한 API
+
+- 8081과 8082 중 어떤 포트를 사용할지 판단하는 기준이 되는 API
+
+> [ProfileController.java] 링크
+> 
+- env.getActiveProfiles()
+    - 현재 실행 중인 ActiveProfile을 모두 가져옴
+
+> [ProfileController.java 테스트 코드] 링크
+> 
+- 해당 테스트 코드에는 스프링 환경이 필요하지 않기 때문에 @SpringBootTest없이 테스트 코드 작성
+- ProfileController나 Environment 모두 자바 클래스(인터페이스)이기 때문에 MockEnvironment를 사용해서 테스트 가능
+
+> [SecurityConfig] 링크
+> 
+- /profile이 인증없이 호출될 수 있도록 제외 코드 추가
+
+> [SecurityConfig 테스트 코드] 링크
+> 
+- 스프링 시큐리티 설정을 불러와야 하기 때문에 @SpringBootTest를 사용
+- profile은_인증없이_호출된다() 유닛 테스트에서 expected에 “oauth”로 변경
+
+### 2) real1, real2 profile 생성
+
+- 무중단 배포를 위한 profile 2개(real1, real2)를 src/main/resources) 아래에 추가
+
+> [application-real1.yml] 링크
+> 
+- port : 8081
+
+> [application-real2.yml] 링크
+> 
+- port: 8082
+
+### 3) Nginx 설정 수정
+
+- 무중단 배포의 핵심은 Nginx 설정
+- 배포 때마다 Nginx의 프록시 설정이 교체되기 때문에 프록시 설정이 교체될 수 있도록 설정 추가
+
+> Nginx 설정 파일 추가
+> 
+
+```bash
+sudo vim /etc/nginx/conf.d/service-url.inc
+```
+
+> 설정 추가
+> 
+
+```bash
+set $service_url http://127.0.0.1:8080;
+```
+
+> Nginx에서 위 설정 파일을 사용할 수 있게 설정
+> 
+
+```bash
+include /etc/nginx/conf.d/service-url.inc
+
+location / {
+	proxy_pass $service_url;
+	...
+}
+```
+
+- 저장 후, nginx 재실행
+
+### 4) 배포 스크립트 작성
+
+> step3 디렉터리 생성
+> 
+
+```bash
+mkdir ~/app/step3 && mkdir ~/app/step3/zip
+```
+
+- 기존의 step2와 중복되지 않도록 step3 디렉터리 생성
+
+> [appspec.yml] 링크
+> 
+- step3 디렉터리로 배포되도록 수정
+- 무중단 배포를 진행할 스크립트를 사용하도록 설정
+    - [stop.sh](http://stop.sh) : 기존 엔진엑스에 연결되어 있진 않지만, 실행 중이던 스프링 부트 종료
+    - [start.sh](http://start.sh) : 배포할 신규 버전 스프링 부트 프로젝트를 stop.sh로 종료한 ‘profile’로 실행
+    - [health.sh](http://health.sh) : ‘start.sh’로 실행시킨 프로젝트가 정상적으로 실행됐는지 체크
+    - [switch.sh](http://switch.sh) : Nginx가 바라보는 스프링 부트를 최신 버전으로 변경
+    - [profile.sh](http://profile.sh) : 앞선 4개 스크립트 파일에서 공용으로 사용할 ‘profile’과 포트 체크 로직
+- Jar 파일이 복사된 이후부터 차례로 스크립트들이 실행
+
+> [profile.sh] 링크
+> 
+- $(curl -s -o /dev/null -w “%{http_code}” [http://localhost/profile)](http://localhost/profile)-)
+    - 현재 Nginx가 바라보고 있는 스프링 부트가 정상적으로 수행 중인지 확인
+    - 응답값을 HttpStatus로 받음
+- IDLE_PROFILE
+    - Nginx와 연결되지 않은 profile
+    - 스프링 부트 프로젝트를 이 profile로 연결하기 위해 반환
+- echo “${IDLE_PROFILE}”
+    - bash라는 스크립트는 값을 반환하는 기능이 없음
+    - 제일 마지막 줄에 echo로 결과를 출력 후, 클라이언트에서 그 값을 잡어서 ($(find_idle_profile)) 사용
+    
+
+> [stop.sh] 링크
+> 
+- ABSDIR=$(dirname $ABSPATH)
+    - 현재 stop.sh가 속해 있는 경로를 찾음
+- source ${ABSDIR}/profile.sh
+    - 해당 경로의 파일을 불러와 설정되어있는 함수들을 사용할 수 있게 함
+    
+
+> [start.sh] 링크
+> 
+- IDLE_PROFILE=$(find_idle_profile)
+    - IDLE_PROFILE을 통해 yml 파일을 가져옴
+- -Dspring.profiles.active=$IDLE_PROFILE
+    - active profile 지정
+    
+
+> [health.sh] 링크
+> 
+- Nginx와 연결되지 않은 포트로 스프링 부트가 잘 수행되었는지 체크
+- 잘 수행되었다면 Nginx 프록시 설정을 변경
+- 프록시 설정 변경은 switch.sh에서 수행
+
+> [switch.sh] 링크
+> 
+- echo “set \$service_url http://127.0.0.1:${IDLE_PORT};”
+    - 하나의 문장을 만들어 파이프라인(|)로 넘겨주기위해 echo 사용
+    - Nginx가 변경할 프록시 주소 생성
+- |  sudo tee /etc/nginx/conf.d/service-url.inc
+    - echo로 넘겨진 문장을 service-url.inc에 덮어씀
+- sudo service nginx reload
+    - Nginx 설정을 다시 불러옴
+    - 중요한 설정인 경우 restart해야 함
+    
+
+## 4. 무중단 배포 테스트
+
+> check CodeDeploy log
+> 
+
+```bash
+tail -f /opt/codedeploy-agent/deployment-root/deployment-logs/codedelpoy-agent-deployments.log
+```
+
+> check springboot log
+> 
+
+```bash
+vim ~/app/step3/nohup.out
+```
