--- a/vue_spring_aws/2022_04_18/2022_04_18.md
+++ b/vue_spring_aws/2022_04_18/2022_04_18.md
@@ -37,14 +37,14 @@
 > Nginx 무중단 배포 운영
 > 
 
-![Screen Shot 2022-04-17 at 4.13.34 PM.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/53dbacb0-edd6-4606-a2eb-f9fb1a59a93f/Screen_Shot_2022-04-17_at_4.13.34_PM.png)
+![](https://github.com/dheldh77/groupstudy_samsung_mechatronics_euv/blob/master/vue_spring_aws/2022_04_18/ops1.png)
 
 1. 사용자는 서비스 주소로 접속(80 or 443 port)
 2. Nginx는 사용자의 요청을 받아 현재 연결된 스프링 부트로 요청을 전달
     - 그림에서 8081 port
 3. 8082 port의 스프링 부트는 Nginx 와 연결된 상태가 아니여서 요청을 받지 못함
 
-![Screen Shot 2022-04-17 at 4.18.43 PM.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/5b4ec11f-e177-4015-bd84-ff9e55ffc912/Screen_Shot_2022-04-17_at_4.18.43_PM.png)
+![](https://github.com/dheldh77/groupstudy_samsung_mechatronics_euv/blob/master/vue_spring_aws/2022_04_18/ops2.png)
 
 1. 신규 배포가 필요하면, Nginx가 연결되어 있지 않은 8082 port로 배포
 2. 배포하는 동안에도 Nginx는 8081 port와 연결되어 있기 때문에 서비스는 중단되지 않음
@@ -56,7 +56,7 @@
 > 무중단 배포 구조
 > 
 
-![Screen Shot 2022-04-17 at 4.31.26 PM.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/dfdad423-da01-46b5-8f23-75ff428ba412/Screen_Shot_2022-04-17_at_4.31.26_PM.png)
+![](https://github.com/dheldh77/groupstudy_samsung_mechatronics_euv/blob/master/vue_spring_aws/2022_04_18/structure.png)
 
 ## 2. Nginx 설치와 스프링 부트 연동
 
@@ -94,9 +94,9 @@ sudo systemctl start nginx
 
 - EC2 → 보안 그룹 → EC2 보안 그룹 선택 → 인바운드 편집
 
-![Screen Shot 2022-04-17 at 4.37.20 PM.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/53017bb8-6c1c-405f-8ab6-732b8ee8afd3/Screen_Shot_2022-04-17_at_4.37.20_PM.png)
+![](https://github.com/dheldh77/groupstudy_samsung_mechatronics_euv/blob/master/vue_spring_aws/2022_04_18/security1.png)
 
-![Screen Shot 2022-04-17 at 4.37.41 PM.png](https://s3-us-west-2.amazonaws.com/secure.notion-static.com/8ebb5905-bee2-4f32-95a8-3e125931b1c9/Screen_Shot_2022-04-17_at_4.37.41_PM.png)
+![](https://github.com/dheldh77/groupstudy_samsung_mechatronics_euv/blob/master/vue_spring_aws/2022_04_18/security2.png)
 
 ### 3) 리디렉션 주소 추가
 
@@ -121,8 +121,8 @@ proxy_set_header Host $http_host; # 3
 ```
 
 - server 아래의 location / 부분에 위의 코드를 추가
-- 1. proxy_pass : Nginx로 요청이 오면 http:/localhost:8080으로 전달
-- 2. proxy_set_header : 실제 요청 데이터를 header의 각 항목에 할당
+- [1] proxy_pass : Nginx로 요청이 오면 http:/localhost:8080으로 전달
+- [2] proxy_set_header : 실제 요청 데이터를 header의 각 항목에 할당
 
 > Nginx 재시작
 > 
@@ -143,21 +143,21 @@ sudo systemctl restart nginx
 
 - 8081과 8082 중 어떤 포트를 사용할지 판단하는 기준이 되는 API
 
-> [ProfileController.java] 링크
+> [ProfileController](https://github.com/dheldh77/study_spring/blob/master/src/main/java/com/kms/project/springboot/web/ProfileController.java)
 > 
 - env.getActiveProfiles()
     - 현재 실행 중인 ActiveProfile을 모두 가져옴
 
-> [ProfileController.java 테스트 코드] 링크
+> [ProfileControllerUnitTest](https://github.com/dheldh77/study_spring/blob/master/src/test/java/com/kms/project/springboot/web/ProfileControllerUnitTest.java)
 > 
 - 해당 테스트 코드에는 스프링 환경이 필요하지 않기 때문에 @SpringBootTest없이 테스트 코드 작성
 - ProfileController나 Environment 모두 자바 클래스(인터페이스)이기 때문에 MockEnvironment를 사용해서 테스트 가능
 
-> [SecurityConfig] 링크
+> [SecurityConfig](https://github.com/dheldh77/study_spring/blob/master/src/main/java/com/kms/project/springboot/config/auth/SecurityConfig.java)
 > 
 - /profile이 인증없이 호출될 수 있도록 제외 코드 추가
 
-> [SecurityConfig 테스트 코드] 링크
+> [ProfileControllerTest](https://github.com/dheldh77/study_spring/blob/master/src/test/java/com/kms/project/springboot/web/ProfileControllerTest.java)
 > 
 - 스프링 시큐리티 설정을 불러와야 하기 때문에 @SpringBootTest를 사용
 - profile은_인증없이_호출된다() 유닛 테스트에서 expected에 “oauth”로 변경
@@ -166,11 +166,11 @@ sudo systemctl restart nginx
 
 - 무중단 배포를 위한 profile 2개(real1, real2)를 src/main/resources) 아래에 추가
 
-> [application-real1.yml] 링크
+> [application-real1.yml](https://github.com/dheldh77/study_spring/blob/master/src/main/resources/application-real1.yml)
 > 
 - port : 8081
 
-> [application-real2.yml] 링크
+> [application-real2.yml](https://github.com/dheldh77/study_spring/blob/master/src/main/resources/application-real2.yml)
 > 
 - port: 8082
 
@@ -218,20 +218,20 @@ mkdir ~/app/step3 && mkdir ~/app/step3/zip
 
 - 기존의 step2와 중복되지 않도록 step3 디렉터리 생성
 
-> [appspec.yml] 링크
+> [appspec.yml](https://github.com/dheldh77/study_spring/blob/master/appspec.yml)
 > 
 - step3 디렉터리로 배포되도록 수정
 - 무중단 배포를 진행할 스크립트를 사용하도록 설정
-    - [stop.sh](http://stop.sh) : 기존 엔진엑스에 연결되어 있진 않지만, 실행 중이던 스프링 부트 종료
-    - [start.sh](http://start.sh) : 배포할 신규 버전 스프링 부트 프로젝트를 stop.sh로 종료한 ‘profile’로 실행
-    - [health.sh](http://health.sh) : ‘start.sh’로 실행시킨 프로젝트가 정상적으로 실행됐는지 체크
-    - [switch.sh](http://switch.sh) : Nginx가 바라보는 스프링 부트를 최신 버전으로 변경
-    - [profile.sh](http://profile.sh) : 앞선 4개 스크립트 파일에서 공용으로 사용할 ‘profile’과 포트 체크 로직
+    - [stop.sh] : 기존 엔진엑스에 연결되어 있진 않지만, 실행 중이던 스프링 부트 종료
+    - [start.sh] : 배포할 신규 버전 스프링 부트 프로젝트를 stop.sh로 종료한 ‘profile’로 실행
+    - [health.sh] : ‘start.sh’로 실행시킨 프로젝트가 정상적으로 실행됐는지 체크
+    - [switch.sh] : Nginx가 바라보는 스프링 부트를 최신 버전으로 변경
+    - [profile.sh] : 앞선 4개 스크립트 파일에서 공용으로 사용할 ‘profile’과 포트 체크 로직
 - Jar 파일이 복사된 이후부터 차례로 스크립트들이 실행
 
-> [profile.sh] 링크
+> [profile.sh](https://github.com/dheldh77/study_spring/blob/master/scripts/profile.sh)
 > 
-- $(curl -s -o /dev/null -w “%{http_code}” [http://localhost/profile)](http://localhost/profile)-)
+- $(curl -s -o /dev/null -w “%{http_code}” http://localhost/profile)
     - 현재 Nginx가 바라보고 있는 스프링 부트가 정상적으로 수행 중인지 확인
     - 응답값을 HttpStatus로 받음
 - IDLE_PROFILE
@@ -242,7 +242,7 @@ mkdir ~/app/step3 && mkdir ~/app/step3/zip
     - 제일 마지막 줄에 echo로 결과를 출력 후, 클라이언트에서 그 값을 잡어서 ($(find_idle_profile)) 사용
     
 
-> [stop.sh] 링크
+> [stop.sh](https://github.com/dheldh77/study_spring/blob/master/scripts/stop.sh)
 > 
 - ABSDIR=$(dirname $ABSPATH)
     - 현재 stop.sh가 속해 있는 경로를 찾음
@@ -250,7 +250,7 @@ mkdir ~/app/step3 && mkdir ~/app/step3/zip
     - 해당 경로의 파일을 불러와 설정되어있는 함수들을 사용할 수 있게 함
     
 
-> [start.sh] 링크
+> [start.sh](https://github.com/dheldh77/study_spring/blob/master/scripts/start.sh)
 > 
 - IDLE_PROFILE=$(find_idle_profile)
     - IDLE_PROFILE을 통해 yml 파일을 가져옴
@@ -258,13 +258,13 @@ mkdir ~/app/step3 && mkdir ~/app/step3/zip
     - active profile 지정
     
 
-> [health.sh] 링크
+> [health.sh](https://github.com/dheldh77/study_spring/blob/master/scripts/health.sh)
 > 
 - Nginx와 연결되지 않은 포트로 스프링 부트가 잘 수행되었는지 체크
 - 잘 수행되었다면 Nginx 프록시 설정을 변경
 - 프록시 설정 변경은 switch.sh에서 수행
 
-> [switch.sh] 링크
+> [switch.sh](https://github.com/dheldh77/study_spring/blob/master/scripts/switch.sh)
 > 
 - echo “set \$service_url http://127.0.0.1:${IDLE_PORT};”
     - 하나의 문장을 만들어 파이프라인(|)로 넘겨주기위해 echo 사용
